src/hts/private/hts_concat.h

#    define libname "libhts.dll"
#    define libname "libhts.dylib"
#    define libname "libhts.so"
#define BCF_DT_ID       0 // dictionary type
#define BCF_DT_CTG      1
#define BCF_DT_SAMPLE   2
struct hFILE;
//############################
//# kstring
//############################

typedef struct __kstring_t {
  size_t l, m;
  char *s;
} kstring_t;
typedef struct BGZF {
    // Reserved bits should be written as 0; read as "don't care"
    unsigned errcode:16, reserved:1, is_write:1, no_eof_block:1, is_be:1;
    signed compress_level:9;
    unsigned last_block_eof:1, is_compressed:1, is_gzip:1;
    int cache_size;
    int block_length, block_clength, block_offset;
    int64_t block_address, uncompressed_address;
    void *uncompressed_block, *compressed_block;
    void *cache; // a pointer to a hash table
    struct hFILE *fp; // actual file handle
    struct bgzf_mtaux_t *mt; // only used for multi-threading
    bgzidx_t *idx;      // BGZF index
    int idx_build_otf;  // build index on the fly, set by bgzf_index_build_init()
    z_stream *gz_stream;// for gzip-compressed files
} BGZF;
enum htsExactFormat {
    unknown_format,
    binary_format, text_format,
    sam, bam, bai, cram, crai, vcf, bcf, csi, gzi, tbi, bed,
    json,
    format_maximum = 32767
};
enum htsCompression {
    no_compression, gzip, bgzf, custom,
    compression_maximum = 32767
};
typedef struct htsFormat {
    enum htsFormatCategory category;
    enum htsExactFormat format;
    struct { short major, minor; } version;
    enum htsCompression compression;
    short compression_level;  // currently unused
    void *specific;  // format specific options; see struct hts_opt.
} htsFormat;
//###########################
//# hts
//###########################
typedef struct cram_fd {} cram_fd;
typedef struct __hts_idx_t {} hts_idx_t;
typedef struct {
    uint32_t is_bin:1, is_write:1, is_be:1, is_cram:1, is_bgzf:1, dummy:27;
    int64_t lineno;
    kstring_t line;
    char *fn, *fn_aux;
    union {
        BGZF *bgzf;
        struct cram_fd *cram;
        struct hFILE *hfile;
    } fp;
    htsFormat format;
} htsFile;
typedef int hts_readrec_func(BGZF *fp, void *data, void *r, int *tid, int *beg, int *end);
typedef struct _h {} hts_itr_t;
hts_itr_t *hts_itr_query(const hts_idx_t *idx, int tid, int beg, int stop, hts_readrec_func readrec);
//##############################################
//# faidx
//##############################################

typedef struct __faidx_t {} faidx_t;
/// Return name of i-th sequence
const char *faidx_iseq(const faidx_t *fai, int i);
//##############################################
//# vcf
//##############################################


/*
typedef struct {
    int32_t rid;  // CHROM
    int32_t pos;  // POS
    int32_t rlen; // length of REF
    float qual;   // QUAL
    uint32_t n_info:16, n_allele:16;
    uint32_t n_fmt:8, n_sample:24;
    kstring_t shared, indiv;
    bcf_dec_t d; // lazy evaluation: $d is not generated by bcf_read(), but by explicitly calling bcf_unpack()
    int max_unpack;         // Set to BCF_UN_STR, BCF_UN_FLT, or BCF_UN_INFO to boost performance of vcf_parse when some of the fields won't be needed
    int unpacked;           // remember what has been unpacked to allow calling bcf_unpack() repeatedly without redoing the work
    int unpack_size[3];     // the original block size of ID, REF+ALT and FILTER
    int errcode;    // one of BCF_ERR_* codes
} bcf1_t;
*/


typedef struct {
    int type, n;    // variant type and the number of bases affected, negative for deletions
} variant_t;
typedef struct {
    int type;       // One of the BCF_HL_* type
    char *key;      // The part before '=', i.e. FILTER/INFO/FORMAT/contig/fileformat etc.
    char *value;    // Set only for generic lines, NULL for FILTER/INFO, etc.
    int nkeys;              // Number of structured fields
    char **keys, **vals;    // The key=value pairs
} bcf_hrec_t;
typedef struct {
    int id;             // id: numeric tag id, the corresponding string is bcf_hdr_t::id[BCF_DT_ID][$id].key
    int n, size, type;  // n: number of values per-sample; size: number of bytes per-sample; type: one of BCF_BT_* types
    uint8_t *p;         // same as vptr and vptr_* in bcf_info_t below
    uint32_t p_len;
    uint32_t p_off:31, p_free:1;
} bcf_fmt_t;
typedef struct {
    int key;        // key: numeric tag id, the corresponding string is bcf_hdr_t::id[BCF_DT_ID][$key].key
    int type, len;  // type: one of BCF_BT_* types; len: vector length, 1 for scalars
    union {
        int32_t i; // integer value
        float f;   // float value
    } v1; // only set if $len==1; for easier access
    uint8_t *vptr;          // pointer to data array in bcf1_t->shared.s, excluding the size+type and tag id bytes
    uint32_t vptr_len;      // length of the vptr block or, when set, of the vptr_mod block, excluding offset
    uint32_t vptr_off:31,   // vptr offset, i.e., the size of the INFO key plus size+type bytes
            vptr_free:1;    // indicates that vptr-vptr_off must be freed; set only when modified and the new
                            //    data block is bigger than the original
} bcf_info_t;
typedef struct {
    uint32_t info[3];  // stores Number:20, var:4, Type:4, ColType:4 in info[0..2]
                       // for BCF_HL_FLT,INFO,FMT and contig length in info[0] for BCF_HL_CTG
    bcf_hrec_t *hrec[3];
    int id;
} bcf_idinfo_t;
typedef struct {
    const char *key;
    const bcf_idinfo_t *val;
} bcf_idpair_t;
typedef struct {
	int32_t n[3];
    bcf_idpair_t *id[3];
    void *dict[3];          // ID dictionary, contig dict and sample dict
    char **samples;
    bcf_hrec_t **hrec;
    int nhrec, dirty;
    int ntransl, *transl[2];    // for bcf_translate()
    int nsamples_ori;           // for bcf_hdr_set_samples()
    uint8_t *keep_samples;
    kstring_t mem;
    int32_t m[3];
} bcf_hdr_t;
typedef struct {
    int m_fmt, m_info, m_id, m_als, m_allele, m_flt; // allocated size (high-water mark); do not change
    int n_flt;  // Number of FILTER fields
    int *flt;   // FILTER keys in the dictionary
    char *id, *als;     // ID and REF+ALT block (\0-seperated)
    char **allele;      // allele[0] is the REF (allele[] pointers to the als block); all null terminated
    bcf_info_t *info;   // INFO
    bcf_fmt_t *fmt;     // FORMAT and individual sample
    variant_t *var;     // $var and $var_type set only when set_variant_types called
    int n_var, var_type;
    int shared_dirty;   // if set, shared.s must be recreated on BCF output
    int indiv_dirty;    // if set, indiv.s must be recreated on BCF output
} bcf_dec_t;
typedef struct {
    int32_t rid;  // CHROM
    int32_t pos;  // POS
    int32_t rlen; // length of REF
    float qual;   // QUAL
    uint32_t n_info:16, n_allele:16;
    uint32_t n_fmt:8, n_sample:24;
    kstring_t shared, indiv;
    bcf_dec_t d; // lazy evaluation: $d is not generated by bcf_read(), but by explicitly calling bcf_unpack()
    int max_unpack;         // Set to BCF_UN_STR, BCF_UN_FLT, or BCF_UN_INFO to boost performance of vcf_parse when some of the fields won't be needed
    int unpacked;           // remember what has been unpacked to allow calling bcf_unpack() repeatedly without redoing the work
    int unpack_size[3];     // the original block size of ID, REF+ALT and FILTER
    int errcode;    // one of BCF_ERR_* codes
} bcf1_t;
bcf1_t *bcf_init(void);
int bcf_hdr_parse(bcf_hdr_t *hdr, char *htxt);
/// Appends formatted header text to _str_.
/** If _is_bcf_ is zero, `IDX` fields are discarded.
 *  @return 0 if successful, or negative if an error occurred
 *  @since 1.4
 */
int bcf_hdr_format(const bcf_hdr_t *hdr, int is_bcf, kstring_t *str);
bcf_hdr_t *bcf_hdr_init(const char *mode);
int bcf_hdr_printf(bcf_hdr_t *h, const char *format, ...);
void bcf_hdr_remove(bcf_hdr_t *h, int type, const char *key);
#define bcf_hdr_nsamples(hdr) (hdr)->n[BCF_DT_SAMPLE]
int bcf_hdr_id2int(const bcf_hdr_t *hdr, int type, const char *id);
static inline int bcf_hdr_name2id(const bcf_hdr_t *hdr, const char *id) { return bcf_hdr_id2int(hdr, BCF_DT_CTG, id); }
#define bcf_float_missing 0x7F800001
static inline int bcf_float_is_missing(float f) {
     union { uint32_t i; float f; } u;
     u.f = f;
     return u.i==bcf_float_missing ? 1 : 0;
}
int bcf_read(htsFile *fp, const bcf_hdr_t *h, bcf1_t *v);
#define BCF_UN_STR  1       // up to ALT inclusive
#define BCF_UN_FLT  2       // up to FILTER
#define BCF_UN_INFO 4       // up to INFO
#define BCF_UN_SHR  (BCF_UN_STR|BCF_UN_FLT|BCF_UN_INFO) // all shared       information
#define BCF_UN_FMT  8                           // unpack format and        each sample
#define BCF_UN_IND  BCF_UN_FMT                  // a synonymo of            BCF_UN_FMT
#define BCF_UN_ALL  (BCF_UN_SHR|BCF_UN_FMT)
#define BCF_BT_NULL     0
#define BCF_BT_INT8     1
#define BCF_BT_INT16    2
#define BCF_BT_INT32    3
#define BCF_BT_FLOAT    5
#define BCF_BT_CHAR     7
#define INT8_MIN -128
#define INT16_MIN -32768
#define INT32_MIN -2147483648
int bcf_unpack(bcf1_t *b, int which);
bcf_hdr_t *bcf_hdr_read(htsFile *fp);
bcf_hdr_t *bcf_hdr_dup(const bcf_hdr_t *hdr);
int bcf_hdr_write(htsFile *fp, bcf_hdr_t *h);
int bcf_write(htsFile *fp, bcf_hdr_t *h, bcf1_t *v);
void bcf_hdr_destroy(bcf_hdr_t *h);
bcf1_t *bcf_dup(bcf1_t *src);
void bcf_destroy(bcf1_t *v);
int bcf_update_info(const bcf_hdr_t *hdr, bcf1_t *line, const char *key, const void *values, int n, int type);
int bcf_hdr_set_samples(bcf_hdr_t *hdr, const char *samples, int is_file);
int bcf_subset_format(const bcf_hdr_t *hdr, bcf1_t *rec);
int bcf_get_genotypes(const bcf_hdr_t *hdr, bcf1_t *line, int **dst, int *ndst);
int bcf_get_format_values(const bcf_hdr_t *hdr, bcf1_t *line, const char *tag, void **dst, int *ndst, int type);
//typedef htsFile vcfFile;
int bcf_hdr_append(bcf_hdr_t *h, const char *line);
int bcf_hdr_sync(bcf_hdr_t *h);
int bcf_update_format(const bcf_hdr_t *hdr, bcf1_t *line, const char *key, const void *values, int n, int type);
int vcf_parse(kstring_t *s, const bcf_hdr_t *h, bcf1_t *v);
 
int vcf_format(const bcf_hdr_t *h, const bcf1_t *v, kstring_t *s);
hts_idx_t *bcf_index_load(char *fn);
#define bcf_itr_queryi(idx, tid, beg, end) hts_itr_query((idx), (tid), (beg), (end), bcf_readrec)
int bcf_readrec(BGZF *fp, void *null, void *v, int *tid, int *beg, int *end);