src/hts/private/hts_concat.nim


proc faidx_iseq*(fai: ptr faidx_t; i: cint): cstring {.cdecl, importc: "faidx_iseq",
    dynlib: libname.}
## ##############################################
## # vcf
## ##############################################

const
  BCF_ERR_CTG_UNDEF* = 1
  BCF_ERR_TAG_UNDEF* = 2
  BCF_ERR_NCOLS* = 4
  BCF_ERR_LIMITS* = 8
  BCF_ERR_CHAR* = 16
  BCF_ERR_CTG_INVALID* = 32
  BCF_ERR_TAG_INVALID* = 64

##
## typedef struct {
##     int32_t rid;  // CHROM
##     int32_t pos;  // POS
##     int32_t rlen; // length of REF
##     float qual;   // QUAL
##     uint32_t n_info:16, n_allele:16;
##     uint32_t n_fmt:8, n_sample:24;
##     kstring_t shared, indiv;
##     bcf_dec_t d; // lazy evaluation: $d is not generated by bcf_read(), but by explicitly calling bcf_unpack()
##     int max_unpack;         // Set to BCF_UN_STR, BCF_UN_FLT, or BCF_UN_INFO to boost performance of vcf_parse when some of the fields won't be needed
##     int unpacked;           // remember what has been unpacked to allow calling bcf_unpack() repeatedly without redoing the work
##     int unpack_size[3];     // the original block size of ID, REF+ALT and FILTER
##     int errcode;    // one of BCF_ERR_* codes
## } bcf1_t;
##

type
  INNER_C_UNION_hts_concat_557* {.bycopy, union.} = object
    i*: int32                  ##  integer value
    f*: cfloat                 ##  float value

  variant_t* {.bycopy.} = object
    `type`*: cint
    n*: cint                   ##  variant type and the number of bases affected, negative for deletions

  bcf_hrec_t* {.bycopy.} = object
    `type`*: cint              ##  One of the BCF_HL_* type
    key*: cstring              ##  The part before '=', i.e. FILTER/INFO/FORMAT/contig/fileformat etc.
    value*: cstring            ##  Set only for generic lines, NULL for FILTER/INFO, etc.
    nkeys*: cint               ##  Number of structured fields
    keys*: cstringArray
    vals*: cstringArray        ##  The key=value pairs

  bcf_fmt_t* {.bycopy.} = object
    id*: cint                  ##  id: numeric tag id, the corresponding string is bcf_hdr_t::id[BCF_DT_ID][$id].key
    n*: cint
    size*: cint
    `type`*: cint              ##  n: number of values per-sample; size: number of bytes per-sample; type: one of BCF_BT_* types
    p*: ptr uint8               ##  same as vptr and vptr_* in bcf_info_t below
    p_len*: uint32
    p_off* {.bitsize: 31.}: uint32
    p_free* {.bitsize: 1.}: uint32

  bcf_info_t* {.bycopy.} = object
    key*: cint                 ##  key: numeric tag id, the corresponding string is bcf_hdr_t::id[BCF_DT_ID][$key].key
    `type`*: cint
    len*: cint                 ##  type: one of BCF_BT_* types; len: vector length, 1 for scalars
    v1*: INNER_C_UNION_hts_concat_557 ##  only set if $len==1; for easier access
    vptr*: ptr uint8            ##  pointer to data array in bcf1_t->shared.s, excluding the size+type and tag id bytes
    vptr_len*: uint32          ##  length of the vptr block or, when set, of the vptr_mod block, excluding offset
    vptr_off* {.bitsize: 31.}: uint32 ##  vptr offset, i.e., the size of the INFO key plus size+type bytes
    vptr_free* {.bitsize: 1.}: uint32 ##  indicates that vptr-vptr_off must be freed; set only when modified and the new
                                  ##     data block is bigger than the original

  bcf_idinfo_t* {.bycopy.} = object
    info*: array[3, uint32] ##  stores Number:20, var:4, Type:4, ColType:4 in info[0..2]
                         ##  for BCF_HL_FLT,INFO,FMT and contig length in info[0] for BCF_HL_CTG
    hrec*: array[3, ptr bcf_hrec_t]
    id*: cint

  bcf_idpair_t* {.bycopy.} = object
    key*: cstring
    val*: ptr bcf_idinfo_t

  bcf_hdr_t* {.bycopy.} = object
    n*: array[3, int32]
    id*: array[3, ptr bcf_idpair_t]
    dict*: array[3, pointer]    ##  ID dictionary, contig dict and sample dict
    samples*: cstringArray
    hrec*: ptr ptr bcf_hrec_t
    nhrec*: cint
    dirty*: cint
    ntransl*: cint
    transl*: array[2, ptr cint]  ##  for bcf_translate()
    nsamples_ori*: cint        ##  for bcf_hdr_set_samples()
    keep_samples*: ptr uint8
    mem*: kstring_t
    m*: array[3, int32]

  bcf_dec_t* {.bycopy.} = object
    m_fmt*: cint
    m_info*: cint
    m_id*: cint
    m_als*: cint
    m_allele*: cint
    m_flt*: cint               ##  allocated size (high-water mark); do not change
    n_flt*: cint               ##  Number of FILTER fields
    flt*: ptr cint              ##  FILTER keys in the dictionary
    id*: cstring
    als*: cstring              ##  ID and REF+ALT block (\0-seperated)
    allele*: cstringArray      ##  allele[0] is the REF (allele[] pointers to the als block); all null terminated
    info*: ptr bcf_info_t       ##  INFO
    fmt*: ptr bcf_fmt_t         ##  FORMAT and individual sample
    `var`*: ptr variant_t       ##  $var and $var_type set only when set_variant_types called
    n_var*: cint
    var_type*: cint
    shared_dirty*: cint        ##  if set, shared.s must be recreated on BCF output
    indiv_dirty*: cint         ##  if set, indiv.s must be recreated on BCF output

  bcf1_t* {.bycopy.} = object
    rid*: int32                ##  CHROM
    pos*: int32                ##  POS
    rlen*: int32               ##  length of REF
    qual*: cfloat              ##  QUAL
    n_info* {.bitsize: 16.}: uint32
    n_allele* {.bitsize: 16.}: uint32
    n_fmt* {.bitsize: 8.}: uint32
    n_sample* {.bitsize: 24.}: uint32
    shared*: kstring_t
    indiv*: kstring_t
    d*: bcf_dec_t              ##  lazy evaluation: $d is not generated by bcf_read(), but by explicitly calling bcf_unpack()
    max_unpack*: cint          ##  Set to BCF_UN_STR, BCF_UN_FLT, or BCF_UN_INFO to boost performance of vcf_parse when some of the fields won't be needed
    unpacked*: cint            ##  remember what has been unpacked to allow calling bcf_unpack() repeatedly without redoing the work
    unpack_size*: array[3, cint] ##  the original block size of ID, REF+ALT and FILTER
    errcode*: cint             ##  one of BCF_ERR_* codes


proc bcf_init*(): ptr bcf1_t {.cdecl, importc: "bcf_init", dynlib: libname.}
proc bcf_hdr_parse*(hdr: ptr bcf_hdr_t; htxt: cstring): cint {.cdecl,
    importc: "bcf_hdr_parse", dynlib: libname.}
## / Appends formatted header text to _str_.
## * If _is_bcf_ is zero, `IDX` fields are discarded.
##   @return 0 if successful, or negative if an error occurred
##   @since 1.4
##

proc bcf_hdr_format*(hdr: ptr bcf_hdr_t; is_bcf: cint; str: ptr kstring_t): cint {.cdecl,
    importc: "bcf_hdr_format", dynlib: libname.}
proc bcf_hdr_init*(mode: cstring): ptr bcf_hdr_t {.cdecl, importc: "bcf_hdr_init",
    dynlib: libname.}
proc bcf_hdr_printf*(h: ptr bcf_hdr_t; format: cstring): cint {.varargs, cdecl,
    importc: "bcf_hdr_printf", dynlib: libname.}
proc bcf_hdr_remove*(h: ptr bcf_hdr_t; `type`: cint; key: cstring) {.cdecl,
    importc: "bcf_hdr_remove", dynlib: libname.}
proc bcf_hdr_add_sample*(hdr: ptr bcf_hdr_t; sample: cstring): cint {.cdecl,
    importc: "bcf_hdr_add_sample", dynlib: libname.}
template bcf_hdr_nsamples*(hdr: untyped): untyped =
  (hdr).n[BCF_DT_SAMPLE]

proc bcf_hdr_id2int*(hdr: ptr bcf_hdr_t; `type`: cint; id: cstring): cint {.cdecl,
    importc: "bcf_hdr_id2int", dynlib: libname.}
proc bcf_hdr_name2id*(hdr: ptr bcf_hdr_t; id: cstring): cint {.inline, cdecl.} =
  return bcf_hdr_id2int(hdr, BCF_DT_CTG, id)

const
  bcf_float_missing* = 0x7F800001

proc bcf_float_is_missing*(f: cfloat): cint {.inline, cdecl.} =
  var u: tuple[i: uint32, f: cfloat]
  u.f = f
  return if u.i == bcf_float_missing: 1 else: 0

proc bcf_read*(fp: ptr htsFile; h: ptr bcf_hdr_t; v: ptr bcf1_t): cint {.cdecl,
    importc: "bcf_read", dynlib: libname.}
const
  BCF_UN_STR* = 1
  BCF_UN_FLT* = 2
  BCF_UN_INFO* = 4
  BCF_UN_SHR* = (BCF_UN_STR or BCF_UN_FLT or BCF_UN_INFO) ##  all shared       information
  BCF_UN_FMT* = 8
  BCF_UN_IND* = BCF_UN_FMT
  BCF_UN_ALL* = (BCF_UN_SHR or BCF_UN_FMT)
  BCF_BT_NULL* = 0
  BCF_BT_INT8* = 1
  BCF_BT_INT16* = 2
  BCF_BT_INT32* = 3
  BCF_BT_FLOAT* = 5
  BCF_BT_CHAR* = 7
  INT8_MIN* = -128
  INT16_MIN* = -32768
  INT32_MIN* = -2147483648'i64

proc bcf_unpack*(b: ptr bcf1_t; which: cint): cint {.cdecl, importc: "bcf_unpack",
    dynlib: libname.}
proc bcf_hdr_read*(fp: ptr htsFile): ptr bcf_hdr_t {.cdecl, importc: "bcf_hdr_read",
    dynlib: libname.}
proc bcf_hdr_dup*(hdr: ptr bcf_hdr_t): ptr bcf_hdr_t {.cdecl, importc: "bcf_hdr_dup",
    dynlib: libname.}
proc bcf_hdr_write*(fp: ptr htsFile; h: ptr bcf_hdr_t): cint {.cdecl,
    importc: "bcf_hdr_write", dynlib: libname.}
proc bcf_write*(fp: ptr htsFile; h: ptr bcf_hdr_t; v: ptr bcf1_t): cint {.cdecl,
    importc: "bcf_write", dynlib: libname.}
proc bcf_hdr_destroy*(h: ptr bcf_hdr_t) {.cdecl, importc: "bcf_hdr_destroy",
                                      dynlib: libname.}
proc bcf_dup*(src: ptr bcf1_t): ptr bcf1_t {.cdecl, importc: "bcf_dup", dynlib: libname.}
proc bcf_destroy*(v: ptr bcf1_t) {.cdecl, importc: "bcf_destroy", dynlib: libname.}
proc bcf_add_filter*(hdr: ptr bcf_hdr_t; line: ptr bcf1_t; flt_id: cint): cint {.cdecl,
    importc: "bcf_add_filter", dynlib: libname.}
proc bcf_update_id*(hdr: ptr bcf_hdr_t; line: ptr bcf1_t; id: cstring): cint {.cdecl,
    importc: "bcf_update_id", dynlib: libname.}
proc bcf_update_info*(hdr: ptr bcf_hdr_t; line: ptr bcf1_t; key: cstring;
                     values: pointer; n: cint; `type`: cint): cint {.cdecl,
    importc: "bcf_update_info", dynlib: libname.}
proc bcf_update_alleles_str*(hdr: ptr bcf_hdr_t; line: ptr bcf1_t;
                            dst: ptr cstringArray): cint {.cdecl,
    importc: "bcf_update_alleles_str", dynlib: libname.}
proc bcf_hdr_set_samples*(hdr: ptr bcf_hdr_t; samples: cstring; is_file: cint): cint {.
    cdecl, importc: "bcf_hdr_set_samples", dynlib: libname.}
proc bcf_subset_format*(hdr: ptr bcf_hdr_t; rec: ptr bcf1_t): cint {.cdecl,
    importc: "bcf_subset_format", dynlib: libname.}
proc bcf_get_genotypes*(hdr: ptr bcf_hdr_t; line: ptr bcf1_t; dst: ptr ptr cint;
                       ndst: ptr cint): cint {.cdecl, importc: "bcf_get_genotypes",
    dynlib: libname.}
proc bcf_get_format_values*(hdr: ptr bcf_hdr_t; line: ptr bcf1_t; tag: cstring;
                           dst: ptr pointer; ndst: ptr cint; `type`: cint): cint {.cdecl,
    importc: "bcf_get_format_values", dynlib: libname.}
proc bcf_get_format_string*(hdr: ptr bcf_hdr_t; line: ptr bcf1_t; tag: cstring;
                           dst: ptr cstringArray; ndst: ptr cint): cint {.cdecl,
    importc: "bcf_get_format_string", dynlib: libname.}
## typedef htsFile vcfFile;

proc bcf_hdr_append*(h: ptr bcf_hdr_t; line: cstring): cint {.cdecl,
    importc: "bcf_hdr_append", dynlib: libname.}
proc bcf_hdr_sync*(h: ptr bcf_hdr_t): cint {.cdecl, importc: "bcf_hdr_sync",
                                        dynlib: libname.}
proc bcf_update_format_string*(hdr: ptr bcf_hdr_t; line: ptr bcf1_t; key: cstring;
                              values: cstringArray; n: cint): cint {.cdecl,
    importc: "bcf_update_format_string", dynlib: libname.}
proc bcf_update_format*(hdr: ptr bcf_hdr_t; line: ptr bcf1_t; key: cstring;
                       values: pointer; n: cint; `type`: cint): cint {.cdecl,
    importc: "bcf_update_format", dynlib: libname.}
proc vcf_parse*(s: ptr kstring_t; h: ptr bcf_hdr_t; v: ptr bcf1_t): cint {.cdecl,
    importc: "vcf_parse", dynlib: libname.}
proc vcf_format*(h: ptr bcf_hdr_t; v: ptr bcf1_t; s: ptr kstring_t): cint {.cdecl,
    importc: "vcf_format", dynlib: libname.}
proc bcf_index_load*(fn: cstring): ptr hts_idx_t {.cdecl, importc: "bcf_index_load",
    dynlib: libname.}
template bcf_itr_queryi*(idx, tid, beg, `end`: untyped): untyped =
  hts_itr_query((idx), (tid), (beg), (`end`), bcf_readrec)
